implement hooks and state management; update index and main files for new structure

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.js"></script>
     <!-- <script type="module" src="/src/example/reconciliationTest.js"></script> -->
+    <!-- <script type="module" src="/src/example/stateTest.js"></script> -->
   </body>
 </html>
